# yamusic

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  main.rs
src/app/: actions.rs  core.rs  keymap.rs  mod.rs  terminal.rs  theme.rs
src/app/components/: dynamic_list.rs  fuzzy.rs  fuzzy_dropdown.rs  header.rs  lyrics.rs  mod.rs  player.rs  progress.rs  sidebar.rs  spinner.rs  toast.rs  visualizer_gpu.rs
src/app/components/widgets/: eq_graph.rs  mod.rs  slider.rs
src/app/data/: item.rs  mod.rs  source.rs
src/app/data/providers/: mod.rs  paginated.rs  playlist.rs  queue.rs  track.rs
src/app/data/resource_sources/: album_tracks.rs  liked_tracks.rs  playlist_info.rs  playlist_tracks.rs
src/app/data/sources/: artist_tracks.rs  mod.rs  playlist_info.rs
src/app/signals/: audio.rs  library.rs  lyrics.rs  mod.rs  navigation.rs
src/app/state/: mod.rs  search.rs  wave.rs
src/app/views/: home.rs  mod.rs  playlist_list.rs  search.rs  track_list.rs
src/app/views/overlay/: mod.rs  theme_picker.rs
src/app/views/overlay/fx/: bandpass.rs  base.rs  chorus.rs  compressor.rs  dc_block.rs  delay.rs  eq.rs  highpass.rs  lowpass.rs  mod.rs  notch.rs  overdrive.rs  reverb.rs  util.rs
src/app/views/renderers/: album.rs  artist.rs  icons.rs  mod.rs  playlist.rs  track.rs
src/audio/: backend.rs  cache.rs  commands.rs  config.rs  controller.rs  engine.rs  error.rs  fx.rs  liked.rs  mod.rs  monitor.rs  playback.rs  progress.rs  queue.rs  signals.rs  state.rs  stream_manager.rs  system.rs  traits.rs  util.rs
src/audio/fx/: analyzer.rs  biquad.rs  chain.rs  delay.rs  fade.rs  init.rs  mod.rs  param.rs
src/audio/fx/modules/: biquad.rs  chorus.rs  compressor.rs  dc_block.rs  delay.rs  eq.rs  fade.rs  mod.rs  monitor.rs  overdrive.rs  reverb.rs
src/auth/: login.rs  mod.rs  token.rs
src/cache/: image.rs
src/event/: events.rs
src/framework/: audio_bridge.rs  component.rs  event.rs  id.rs  mod.rs  model.rs  reactive.rs  resources.rs  runtime.rs  tasks.rs  theme.rs
src/http/: mod.rs
src/stream/: buffer.rs  data_source.rs  mod.rs  pcm.rs  streamer.rs
src/ui/: app.rs  context.rs  input.rs  layout.rs  message.rs  mod.rs  router.rs  state.rs  traits.rs  tui.rs
src/ui/components/: app.rs  controls.rs  gauge.rs  lyrics.rs  mod.rs  player.rs  progress.rs  sidebar.rs  spinner.rs
src/ui/util/: handler.rs  mod.rs
src/ui/views/: album_detail.rs  artist_detail.rs  liked_tracks.rs  lyrics.rs  mod.rs  my_vibe.rs  my_vibe_gpu.rs  my_wave.rs  my_wave_gpu.rs  playlist_detail.rs  playlists.rs  search.rs  track_detail.rs  track_list.rs
src/util/: animation.rs  colors.rs  hook.rs  log.rs  macros.rs  mod.rs  task.rs  track.rs
theme/: golden_day.toml  golden_night.toml
