[package]
authors = ["vyfor"]
categories = ["command-line-utilities", "multimedia", "multimedia::audio"]
description = "Yandex Music for the Terminal"
edition = "2024"
keywords = ["yandex", "music", "tui", "cli", "audio-player"]
license = "Apache-2.0"
name = "yamusic"
repository = "https://github.com/yamusic/yamusic"
version = "0.0.1"

[dependencies]
# Core 
tokio = { version = "1.45.1", features = ["full"] }
reqwest = { version = "0.12.20", features = ["blocking"] }

# TUI
ratatui = { version = "0.29.0", features = ["unstable-widget-ref"] }
crossterm = { version = "0.28.1", features = ["event-stream"] }

# Audio
rodio = { git = "https://github.com/rustaudio/rodio", rev = "1b3459a93c59b8bb1a0351ac4b560e54c5c917b5", default-features = false, features = [
  "playback",
  "symphonia-flac",
  "symphonia-aac",
  "symphonia-mp3",
  "symphonia-isomp4",
  "symphonia-simd",
  "tracing",
] }


yandex-music = "0.4.4"

# Utilities
unicode-width = "0.1"
# Logging
tracing-error = "0.2.1"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
color-eyre = "0.6.5"
directories = "6.0.0"

# Utilities
flume = "0.11.1"
dotenv = "0.15.0"
lazy_static = "1.5.0"
rand = "0.9.1"
crossbeam-channel = "0.5.15"
thiserror = "2.0.17"
async-trait = "0.1.89"
futures = "0.3"

rayon = "1.10"
wgpu = "0.20"
bytemuck = { version = "1.16", features = ["derive"] }
pollster = "0.3"

[profile.inc]
inherits = "release"
opt-level = 2
codegen-units = 1024
lto = false
incremental = true

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
